fix the modal z-index

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ body {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 6;
     padding-top: 100px;
     left: 0;
     top: 0;
